Add new class Event in models.todo

--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -1,10 +1,10 @@
 Task:
 
-1.+++TODO (quick task - without callendar)
+1.++TODO (quick task - without callendar)
 2.TASK (callendar based) Year, month, week, day, hour, min planner
-3.Repeat task
-4.% support for task
-5.Category of task
+3.+Repeat task
+4.++% support for task
+5.+Category of task
 6.Events
 7.++Reminder
 8.Task to pdf by period
